--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
   "plugins": ["@prettier/plugin-ruby"],
-  "rubyStrictMode": true,
+  "rubyStrictMode": false,
   "tabWidth": 2,
   "useTabs": false,
   "singleQuote": true
