--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -22,6 +22,10 @@ jobs:
           ruby-version: ${{ matrix.ruby-version }}
           bundler-cache: true
 
+
+      - name: Install specific Bundler version
+        run: gem install bundler -v 2.5.23
+
       - name: Install dependencies
         run: bundle install
 
